--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
       /* CSS для стилизации заголовка и кнопок */
       h1 {
         text-align: center;
+        color: white;
+        font-size: 4em;
+        padding-top: 20%;
+        text-shadow: 2px 2px 4px #000000;
       }
       .button-container {
         display: flex;
@@ -23,6 +27,13 @@
         font-size: 16px;
         margin-right: 10px;
       }
+      
+      /* CSS для задания картинки на задний фон */
+      body {
+        background-image: url('image.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+      }
     </style>
   </head>
   <body>
@@ -32,6 +43,6 @@
       <a href="register.html" class="button">Register</a>
       <a href="tryyoursuccess.html" class="button">Try Your Success</a>
     </div>
-    <img src="example-image.jpg" alt="Пример изображения" width="300">
   </body>
 </html>
+
