--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         text-shadow: 2px 2px 4px #000000;
       }
       .button-container {
-        display: flex;
-        justify-content: flex-start;
-        margin: 10px 0;
+        position: absolute;
+        top: 10px;
+        left: 10px;
       }
       .button {
         background-color: #4CAF50;
