--- a/tryyoursuccess.html
+++ b/tryyoursuccess.html
@@ -2,6 +2,12 @@
 <html>
 <head>
   <title>Check your products</title>
+  <style>
+    /* CSS для стилизации страницы */
+    body {
+      background-color: lightblue;
+    }
+  </style>
 </head>
 <body>
   <h1>Check your products</h1>
