--- a/login.html
+++ b/login.html
@@ -4,10 +4,17 @@
     <title>Login</title>
     <style>
       /* CSS для стилизации формы входа */
+      body {
+        background-color: lightblue;
+      }
       form {
         display: flex;
         flex-direction: column;
         align-items: center;
+        background-color: white;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
       }
       label {
         margin-top: 10px;
