--- a/register.html
+++ b/register.html
@@ -4,6 +4,9 @@
     <title>Register</title>
     <style>
       /* CSS для стилизации формы регистрации */
+      body {
+        background-color: lightblue;
+      }
       form {
         display: flex;
         flex-direction: column;
