--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Home</title>
+    <title>Energija</title>
     <style>
       /* CSS для стилизации заголовка и кнопок */
       h1 {
