--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </style>
   </head>
   <body>
-    <h1>Home</h1>
+    <h1>Energija</h1>
     <div class="button-container">
       <a href="login.html" class="button">Login</a>
       <a href="register.html" class="button">Register</a>
